tests/typing/pass/ae/adts/adts_1.ae

type t = A | B | C of { c_1 : t }

goal g:
  C(A) ? C and C(B)#c_1 = B
